kubernetes/apps/transmission/middleware-transmission.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-transmission
  namespace: transmission
spec:
  stripPrefix:
    prefixes:
      - /transmission
