kubernetes/apps/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: transmission
spec:
  selector:
    app: transmission
  ports:
    - name: http
      port: 9091
      targetPort: 9091
