kubernetes/apps/transmission/ingressroute-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: transmission-lan
  namespace: transmission
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.0.100`) && PathPrefix(`/transmission`)
      kind: Rule
      services:
        - name: transmission
          port: 9091
